# ai-claude-code-show

./: README.md  setup-tmux-blink.sh  setup-windows-firewall.ps1
vaneck/: .env.example  .gitignore  CLAUDE.md  DEBUG_ANALYSIS.md  Dockerfile  Makefile  README.md  SECURITY_ANALYSIS_REPORT.md  SOLUTION_SUMMARY.md  debug_pdf_downloads.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  scrape_product_page.py  simple_debug_downloads.py  test_real_urls.py
vaneck/config/: config.yaml.example
vaneck/debug_downloads/: debug_results.json  product_scrape_results.json
vaneck/download/: .gitkeep  download_results.json  sample_download.txt
vaneck/download/BND/: BND_metadata.json
vaneck/download/BUZF/: BUZF_metadata.json
vaneck/download/ESPO/: ESPO_holdings.csv  ESPO_metadata.json
vaneck/download/GDX/: GDX_holdings.csv  GDX_metadata.json
vaneck/download/GDXJ/: GDXJ_holdings.csv  GDXJ_metadata.json
vaneck/download/GPZ/: GPZ_metadata.json
vaneck/download/MOAT/: MOAT_holdings.csv  MOAT_metadata.json
vaneck/download/NLR/: NLR_holdings.csv  NLR_metadata.json
vaneck/download/REMX/: REMX_holdings.csv  REMX_metadata.json
vaneck/download/VEA/: VEA_metadata.json
vaneck/download/VTI/: VTI_metadata.json
vaneck/download/VWO/: VWO_metadata.json
vaneck/download_all/: download_report.json
vaneck/download_all/ANGL/: ANGL_holdings.csv  ANGL_metadata.json
vaneck/download_all/ASHR/: ASHR_holdings.csv  ASHR_metadata.json
vaneck/download_all/BDJ/: BDJ_holdings.csv  BDJ_metadata.json
vaneck/download_all/BUZF/: BUZF_holdings.csv  BUZF_metadata.json
vaneck/download_all/CNXT/: CNXT_holdings.csv  CNXT_metadata.json
vaneck/download_all/EDV/: EDV_holdings.csv  EDV_metadata.json
vaneck/download_all/ESPO/: ESPO_holdings.csv  ESPO_metadata.json
vaneck/download_all/EVX/: EVX_holdings.csv  EVX_metadata.json
vaneck/download_all/FILL/: FILL_holdings.csv  FILL_metadata.json
vaneck/download_all/GDX/: GDX_holdings.csv  GDX_metadata.json
vaneck/download_all/GDXJ/: GDXJ_holdings.csv  GDXJ_metadata.json
vaneck/download_all/HAP/: HAP_holdings.csv  HAP_metadata.json
vaneck/download_all/IFLY/: IFLY_holdings.csv  IFLY_metadata.json
vaneck/download_all/JETS/: JETS_holdings.csv  JETS_metadata.json
vaneck/download_all/KOL/: KOL_holdings.csv  KOL_metadata.json
vaneck/download_all/KWEB/: KWEB_holdings.csv  KWEB_metadata.json
vaneck/download_all/MES/: MES_holdings.csv  MES_metadata.json
vaneck/download_all/MOAT/: MOAT_holdings.csv  MOAT_metadata.json
vaneck/download_all/MOO/: MOO_holdings.csv  MOO_metadata.json
vaneck/download_all/NLR/: NLR_holdings.csv  NLR_metadata.json
vaneck/download_all/OIH/: OIH_holdings.csv  OIH_metadata.json
vaneck/download_all/PEK/: PEK_holdings.csv  PEK_metadata.json
vaneck/download_all/PHO/: PHO_holdings.csv  PHO_metadata.json
vaneck/download_all/REMX/: REMX_holdings.csv  REMX_metadata.json
vaneck/download_all/RSXJ/: RSXJ_holdings.csv  RSXJ_metadata.json
vaneck/download_all/RTM/: RTM_holdings.csv  RTM_metadata.json
vaneck/download_all/RYN/: RYN_holdings.csv  RYN_metadata.json
vaneck/download_test/: download_report.json
vaneck/shell/: README.md  build.sh  dev.sh  run.sh  test.sh
vaneck/src/: README.md  download_all.py  etf_downloader.py  fix_holdings_downloader.py  fixed_vaneck_downloader.py  full_etf_downloader.py  improved_vaneck_etf_downloader.py  main.py  test_angl.py  vaneck_etf_downloader.py
vaneck/tests/: README.md  __init__.py  conftest.py  test_config.py  test_docker_integration.py  test_downloader.py  test_integration.py
(+116 files in other folders)
