[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaneck-etf-downloader"
version = "0.1.0"
description = "A robust ETF data downloader for VanEck funds"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "VanEck ETF Downloader Team", email = "dev@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "selenium>=4.15.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Core testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",
    "pytest-html>=4.1.1",
    
    # HTTP mocking and testing
    "responses>=0.24.0",
    "aioresponses>=0.7.4",
    "httpx>=0.25.0",
    
    # Code quality and linting
    "black>=23.11.0",
    "isort>=5.12.0", 
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
    
    # Coverage and reporting
    "coverage[toml]>=7.3.0",
    
    # Additional testing utilities
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "freezegun>=1.2.2",
    
    # Performance testing
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
]

[project.scripts]
vaneck-downloader = "vaneck_downloader.main:cli"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests - fast, isolated tests",
    "integration: Integration tests - test component interactions", 
    "e2e: End-to-end tests - full system tests",
    "slow: Slow running tests (> 5 seconds)",
    "network: Tests requiring network access",
    "selenium: Tests using Selenium WebDriver",
    "docker: Tests requiring Docker",
    "performance: Performance and load tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false
skip_empty = false

[tool.coverage.xml]
output = "coverage.xml"